EXTRA_DIST = \
	gem_blt.test \
	gem_busy.test \
	gem_create.test \
	gem_exec_ctx.test \
	gem_exec_fault.test \
	gem_exec_nop.test \
	gem_exec_reloc.test \
	gem_exec_trace.test \
	gem_latency.test \
	gem_mmap.test \
	gem_prw.test \
	gem_syslatency.test \
	prime_lookup.test \
	vgem_mmap.test \
	$(NULL)
