EXTRA_DIST = \
	README \
	media_17i7.wsim \
	media_19.wsim \
	media_1n2_480p.wsim \
	media_1n2_asy.wsim \
	media_1n3_480p.wsim \
	media_1n3_asy.wsim \
	media_1n4_480p.wsim \
	media_1n4_asy.wsim \
	media_1n5_480p.wsim \
	media_1n5_asy.wsim \
	media_load_balance_17i7.wsim \
	media_load_balance_19.wsim \
	media_load_balance_4k12u7.wsim \
	media_load_balance_fhd26u7.wsim \
	media_load_balance_hd01.wsim \
	media_load_balance_hd06mp2.wsim \
	media_load_balance_hd12.wsim \
	media_load_balance_hd17i4.wsim \
	media_mfe2_480p.wsim \
	media_mfe3_480p.wsim \
	media_mfe4_480p.wsim \
	media_nn_1080p_s1.wsim \
	media_nn_1080p_s2.wsim \
	media_nn_1080p_s3.wsim \
	media_nn_1080p.wsim \
	media_nn_480p.wsim \
	vcs1.wsim \
	vcs_balanced.wsim \
	$(NULL)
